k8s/k8s_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suma
spec:
  replicas: 2
  selector:
    matchLabels:
      app: suma
  template:
    metadata:
      labels:
        app: suma
    spec:
      containers:
        - name: suma
          image: <image-uri>
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: servicio-suma
spec:
  type: NodePort
  selector:
    app: suma
  ports:
    - port: 80
      targetPort: 4000
      nodePort: 31019
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiplicacion
spec:
  replicas: 2
  selector:
    matchLabels:
      app: multiplicacion
  template:
    metadata:
      labels:
        app: multiplicacion
    spec:
      containers:
        - name: multiplicacion
          image: <image-uri>
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: servicio-multiplicacion
spec:
  type: NodePort
  selector:
    app: multiplicacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 31017
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-8
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /suma
            pathType: Prefix
            backend:
              service:
                name: servicio-suma
                port:
                  number: 80
          - path: /multiplicar
            pathType: Prefix
            backend:
              service:
                name: servicio-multiplicacion
                port:
                  number: 80
